Make channelID url param
